слайдер, выравнивание по PP

--- a/source/less/blocks/general/page-header.less
+++ b/source/less/blocks/general/page-header.less
@@ -1,26 +1,20 @@
-.page-header {
+.page-header__container {
   display: flex;
   flex-direction: column;
   flex-wrap: wrap;
   justify-content: flex-start;
 
   @media (min-width: @tablet-width) {
-    flex-direction: row;
-  }
-}
-
-.page-header__container {
-  @media (min-width: @tablet-width) {
     .wrapper;
-    display: flex;
-    flex: wrap;
-    margin-bottom: 40px;
+    flex-direction: row;
+    align-items: center;
+    margin-bottom: 30px;
   }
 
   @media (min-width: @desktop-width) {
     padding: 0;
     width: 100%;
-    margin-bottom: 80px;
+    margin-bottom: 90px;
   }
 }
 
@@ -29,19 +23,19 @@
   padding-top: 12px;
   padding-bottom: 17px;
   display: flex;
-  align-items: center;
+  flex-wrap: wrap;
+  align-items: flex-start;
 
   @media (min-width: @tablet-width) {
+    padding-top: 24px;
     flex: 1 0 0;
-    padding: 0;
     margin: 0;
-    display: flex;
-    flex-wrap: wrap;
+    padding-left: 0;
   }
 
   @media (min-width: @desktop-width) {
     padding-left: 110px;
-    padding-top: 62px;
+    padding-top: 35px;
   }
 }
 
@@ -49,7 +43,7 @@
   margin-right: 56px;
 
   @media (min-width: @tablet-width) {
-    margin-right: 19px;
+    margin-right: 13px;
   }
 
   @media (min-width: @desktop-width) {
@@ -57,8 +51,20 @@
   }
 }
 
+.page-header__logo-image {
+  @media (min-width: @tablet-width) {
+    width: 60px;
+    height: 52px;
+  }
+
+  @media (min-width: @desktop-width) {
+    width: 70px;
+    height: 59px;
+  }
+}
+
 .page-header__title {
-  background-color: @red;
+  background-color: @special-grey;
   width: 101px;
   height: 18px;
 
@@ -69,5 +75,6 @@
 
   @media (min-width: @desktop-width) {
     width: 130px;
+    height: 59px;
   }
 }
