--- a/source/less/blocks/general/page-footer.less
+++ b/source/less/blocks/general/page-footer.less
@@ -18,7 +18,6 @@
     padding-bottom: 50px;
   }
 
-
   @media (min-width: @desktop-width) {
     padding-top: 55px;
     padding-bottom: 35px;
@@ -26,7 +25,7 @@
 }
 
 .page-footer__heading {
-  background-color: @red;
+  background-color: @special-grey;
   width: 128px;
   height: 24px;
   margin-bottom: 32px;
