--- a/source/less/global/variables.less
+++ b/source/less/global/variables.less
@@ -8,6 +8,7 @@
 @special-dark-grey: #444444;
 @bg-grey: #eaeaea;
 @special-grey: #cdcdcd;
+@grey-bar: #dcdcdc;
 @grey-icon: #666666;
 @grey-border: #e6e6e6;
 @grey-border-input: #e7e7e7;
@@ -77,6 +78,6 @@
 
   &:active {
     background-color: @hover-green;
-    color: rgba(255,255,255, 0.3);
+    color: rgba(255, 255, 255, 0.3);
   }
 }
