исправила стили на главной - подчеркивание в слайдере, высоту строки, перенесла скрипт в отдельный файл

--- a/source/less/blocks/general/address.less
+++ b/source/less/blocks/general/address.less
@@ -74,7 +74,7 @@
 
 .address__map {
   @media (min-width: @mobile-width) {
-    background-color: green;
+    background-color: @green;
     height: 362px;
   }
 
