--- a/source/less/blocks/index/slider.less
+++ b/source/less/blocks/index/slider.less
@@ -40,7 +40,7 @@
 
   @media (min-width: @desktop-width) {
     height: 322px;
-    margin-bottom: 30px;
+    margin-bottom: 35px;
   }
 }
 
@@ -53,13 +53,13 @@
   margin: 0 auto;
 
   @media (min-width: @tablet-width) {
-    width: 590px;
+    width: 570px;
     height: 34px;
   }
 
   @media (min-width: @desktop-width) {
-    width: 600px;
     margin-left: 100px;
+    width: 585px;
   }
 }
 
@@ -72,9 +72,14 @@
   text-transform: uppercase;
 
   @media (min-width: @tablet-width) {
-    .heading(20px; auto);
-    text-decoration: underline dotted;
-    padding: 4px 8px;
+    font-size: 20px;
+    border-bottom: 1px dotted @basic-black;
+    padding: 4px 0;
+  }
+
+
+  @media (min-width: @desktop-width) {
+    padding: 4px 0 6px;
   }
 }
 
