выравнивание каталога по PP

--- a/source/less/blocks/catalog/extra-products.less
+++ b/source/less/blocks/catalog/extra-products.less
@@ -4,21 +4,70 @@
 
   @media (min-width: @tablet-width) {
     line-height: 20px;
+    margin-bottom: 75px;
+  }
+
+  @media (min-width: @desktop-width) {
+    margin-bottom: 85px;
   }
 }
 
 .extra-products__heading {
+  .wrapper;
+  padding-right: 0;
   .heading(24px; 24px);
   margin-bottom: 35px;
+  position: relative;
+  display: flex;
+  align-items: center;
 
+  &::after {
+    content: "";
+    flex-grow: 1;
+    flex-shrink: 0;
+    height: 2px;
+    margin-left: 22px;
+    margin-top: 5px;
+    background-color: @green;
+  }
 
   @media (min-width: @tablet-width) {
     .heading(36px; 36px);
-    padding-left: 37px;
+    padding-left: 0;
+    padding-right: 0;
+    margin-bottom: 80px;
+
+    &::before,
+    &::after {
+      content: "";
+      flex-shrink: 0;
+      height: 2px;
+      background-color: @green;
+      margin-top: 5px;
+    }
+
+    &::before {
+      margin-right: 36px;
+      flex-grow: 1;
+    }
+
+    &::after {
+      margin-left: 22px;
+      flex-grow: 11;
+    }
   }
 
   @media (min-width: @desktop-width) {
     padding-left: 0;
+
+    &::before {
+      margin-right: 22px;
+      flex-grow: 1;
+    }
+
+    &::after {
+      margin-left: 37px;
+    }
   }
 }
 
@@ -36,6 +85,7 @@
   padding: 0;
   margin: 0;
   margin-bottom: 39px;
+  border-bottom: 1px solid @grey-border;
 
   @media (min-width: @tablet-width) {
     border: 1px solid @special-grey;
@@ -51,6 +101,8 @@
 }
 
 .extra-products__item {
+  border-top: 1px solid @grey-border;
+
   @media (min-width: @tablet-width) {
     display: flex;
     flex-wrap: wrap;
@@ -60,14 +112,32 @@
     &:first-child {
       border: none;
     }
+
+    &:nth-child(2) .extra-products__info {
+      width: 164px;
+    }
+
+    &:nth-child(3) .extra-products__info {
+      width: 145px;
+    }
   }
 
   @media (min-width: @desktop-width) {
     align-items: center;
+
+    &:nth-child(2) .extra-products__info {
+      width: 287px;
+    }
+
+    &:nth-child(3) .extra-products__info {
+      width: 287px;
+    }
   }
 }
 
 .extra-products__card {
+  padding-top: 13px;
+
   @media (min-width: @tablet-width) {
     display: flex;
     align-items: center;
@@ -78,13 +148,15 @@
 
   @media (min-width: @desktop-width) {
     width: 613px;
-    padding: 22px 0 23px;
+    padding: 23px 0 24px;
   }
 }
 
 .extra-products__name {
   .heading(16px; 16px);
   .uppercase-text(@special-dark-text);
+  margin-top: 0;
+  margin-bottom: 11px;
 
   @media (min-width: @tablet-width) {
     .heading(20px; 20px);
@@ -96,11 +168,11 @@
 .extra-products__link {
   .button;
   width: 280px;
-  margin-bottom: 25px;
+  margin-bottom: 17px;
 
   @media (min-width: @tablet-width) {
     width: 632px;
-    margin: 0 auto 26px;
+    margin: 0 auto 28px;
   }
 
   @media (min-width: @desktop-width) {
@@ -111,11 +183,25 @@
 
 .extra-products__info {
   width: 100%;
-  margin-bottom: 15px;
+  margin-bottom: 13px;
+
+  & td {
+    padding: 0;
+  }
 
   @media (min-width: @tablet-width) {
     margin-bottom: 0;
     width: 226px;
+  }
+
+  @media (min-width: @desktop-width) {
+    width: 287px;
+  }
+}
+
+.extra-products__size {
+  @media (min-width: @tablet-width) {
+    padding-right: 51px;
   }
 }
 
