--- a/source/less/blocks/catalog/catalog-main.less
+++ b/source/less/blocks/catalog/catalog-main.less
@@ -1,11 +1,16 @@
 .catalog-main__heading {
   .heading(36px; 36px);
   .wrapper;
-  margin-bottom: 49px;
+  margin-top: 28px;
+  margin-bottom: 39px;
 
   @media (min-width: @tablet-width) {
     .heading(60px; 60px);
-    margin-top: 60px;
-    margin-bottom: 83px;
+    margin-top: 58px;
+    margin-bottom: 164px;
+  }
+
+  @media (min-width: @desktop-width) {
+    margin-bottom: 167px;
   }
 }
