--- a/source/less/blocks/general/address.less
+++ b/source/less/blocks/general/address.less
@@ -27,6 +27,11 @@
     padding-bottom: 0;
   }
 
+  &--form {
+    padding-top: 18px;
+    padding-bottom: 7px;
+  }
+
   @media (min-width: @tablet-width) {
     padding: 50px 70px 43px;
   }
