--- a/source/less/blocks/general/page-header.less
+++ b/source/less/blocks/general/page-header.less
@@ -3,12 +3,14 @@
   flex-direction: column;
   flex-wrap: wrap;
   justify-content: flex-start;
+  border-bottom: 1px solid @grey-border-input;
 
   @media (min-width: @tablet-width) {
     .wrapper;
     flex-direction: row;
     align-items: center;
     margin-bottom: 30px;
+    border: none;
   }
 
   @media (min-width: @desktop-width) {
