--- a/source/less/blocks/form/form.less
+++ b/source/less/blocks/form/form.less
@@ -1,9 +1,18 @@
 .form {
-  padding-bottom: 32px;
+  padding-bottom: 31px;
+
+  @media (min-width: @tablet-width) {
+    padding-bottom: 55px;
+  }
+
+  @media (min-width: @desktop-width) {
+    padding-bottom: 85px;
+  }
 }
 
-.form__wrapper {
+.form__container {
   .wrapper;
+  width: 100%;
 
   @media (min-width: @tablet-width) {
     padding-left: 70px;
@@ -12,16 +21,36 @@
 
   @media (min-width: @desktop-width) {
     padding: 0 110px;
+
+    &--contacts {
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: space-between;
+      align-items: center;
+      margin-bottom: 67px;
+    }
+
+    &--info,
+    &--goal {
+      width: 568px;
+      padding: 0;
+    }
+
+    &--contacts .form__point {
+      margin-bottom: 0;
+      width: 568px;
+    }
   }
 }
 
 .form__columns {
   @media (min-width: @desktop-width) {
+    .wrapper;
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
-    align-items: center;
-    margin-bottom: 70px;
+    align-items: flex-start;
+    margin-bottom: 18px;
   }
 }
 
@@ -30,32 +59,166 @@
   .uppercase-text(@special-dark-grey);
   border: none;
   margin: 0;
-  padding: 20px 0;
+  padding: 0;
+
+  &--info {
+    padding-bottom: 7px;
+  }
+
+  &--program {
+    border-top: 1px solid @grey-border-input;
+    border-bottom: 1px solid @grey-border-input;
+    margin-bottom: 26px;
+  }
+
+  &--contacts {
+    margin-bottom: 7px;
+  }
+
+  &--comment {
+    margin-bottom: 21px;
+  }
+
+  &--add {
+    margin-bottom: 40px;
+  }
 
   @media (min-width: @tablet-width) {
     .heading(20px; auto);
     color: @special-dark-grey;
 
-    & .form__title {
-      margin-bottom: 76px;
+    &--info {
+      padding-bottom: 50px;
     }
 
-    &--add .form__title {
-      margin-bottom: 57px;
+    &--program {
+      border: none;
+      margin-bottom: 75px;
+    }
+
+    &--contacts {
+      margin-bottom: 45px;
+    }
+
+    &--comment {
+      margin-bottom: 65px;
+    }
+
+    &--add {
+      margin-bottom: 10px;
     }
   }
 
   @media (min-width: @desktop-width) {
-    &--info,
     &--program {
-      width: 568px;
-      padding: 0;
+      margin-bottom: 0;
+    }
+
+    &--contacts {
+      margin-bottom: 0;
+    }
+
+    &--comment {
+      margin-bottom: 67px;
     }
   }
 }
 
 .form__title {
-  margin-bottom: 30px;
+  .wrapper;
+  padding-right: 0;
+  padding-left: 18px;
+  margin: 0;
+  margin-bottom: 35px;
+  position: relative;
+  display: flex;
+  align-items: center;
+
+  &::after {
+    content: "";
+    flex-grow: 1;
+    flex-shrink: 0;
+    height: 2px;
+    margin-top: 15px;
+    margin-left: 22px;
+    background-color: @green;
+  }
+
+  &--contacts {
+    margin-bottom: 27px;
+
+    &::after {
+      margin-top: -20px;
+    }
+  }
+
+  &--comment {
+    margin-bottom: 38px;
+
+    &::after {
+      margin-top: 7px;
+    }
+  }
+
+  &--add {
+    margin-bottom: 40px;
+
+    &::after {
+      margin-top: 5px;
+    }
+  }
+
+  @media (min-width: @tablet-width) {
+    padding: 0;
+
+    &::before {
+      content: "";
+      flex-grow: 1;
+      flex-shrink: 0;
+      height: 2px;
+      margin-top: 10px;
+      margin-right: 22px;
+      background-color: @green;
+    }
+
+    &::after {
+      flex-grow: 10;
+      margin-top: 10px;
+    }
+
+    &--contacts br {
+      display: none;
+    }
+
+    &--contacts {
+      margin-bottom: 70px;
+
+      &::after {
+        margin-top: 13px;
+        flex-grow: 4;
+      }
+    }
+
+    &--comment {
+      margin-bottom: 74px;
+    }
+
+    &--add {
+      margin-bottom: 70px;
+    }
+  }
+
+  @media (min-width: @desktop-width) {
+    &::after {
+      flex-grow: 13;
+    }
+
+    &--contacts {
+      &::after {
+        flex-grow: 9;
+      }
+    }
+  }
 }
 
 .form__legend {
@@ -67,30 +230,25 @@
   }
 }
 
-.form__container {
-  width: 100%;
-
-  @media (min-width: @desktop-width) {
-    &--contacts {
-      display: flex;
-      flex-wrap: wrap;
-      justify-content: space-between;
-      align-items: center;
-      margin-bottom: 67px;
-    }
-
-    &--contacts .form__point {
-      width: 568px;
-      margin-bottom: 0;
-    }
-  }
-}
-
 .form__point {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
   align-items: center;
+  margin-top: 10px;
+  margin-bottom: 15px;
+
+  &--contacts {
+    margin-bottom: 8px;
+  }
+
+  @media (min-width: @tablet-width) {
+    margin-bottom: 21px;
+
+    &--contacts {
+      margin-bottom: 15px;
+    }
+  }
 
   @media (min-width: @desktop-width) {
     &:first-child {
@@ -107,9 +265,17 @@
   .heading(16px; 18px);
   .uppercase-text(@special-dark-grey);
   border: 1px solid @grey-border-input;
-  padding: 12px 16px 13px 16px;
+  padding: 13px 16px 13px 14px;
   flex: 1;
-  margin-left: 10px;
+  margin-left: 14px;
+
+  &--mail {
+    margin-top: 7px;
+  }
+
+  &--tel {
+    margin-top: 5px;
+  }
 
   @media (min-width: @tablet-width) {
     .heading(20px; 30px);
@@ -125,17 +291,26 @@
 
   &--goal {
     color: @special-dark-text;
+    padding: 28px 0 24px;
   }
 
   &--extra {
     color: @basic-black;
   }
 
+  &--extra .form__option {
+    margin-bottom: 24px;
+  }
+
   @media (min-width: @tablet-width) {
     &--goal {
       border: 1px solid @grey-border-input;
-      padding: 25px 0;
+      padding: 35px 0;
       padding-left: 28px;
+    }
+
+    &--goal .form__option {
+      margin-bottom: 35px;
     }
 
     &--extra {
@@ -145,7 +320,8 @@
 
     &--extra .form__option {
       width: 282px;
-      margin-right: 50px;
+      margin-right: 60px;
+      margin-bottom: 54px;
 
       &:nth-child(2n) {
         margin-right: 0;
@@ -154,15 +330,21 @@
   }
 
   @media (min-width: @desktop-width) {
+    &--extra {
+      justify-content: space-between;
+      width: 1196px;
+      margin-bottom: 5px;
+    }
+
     &--extra .form__option {
-      width: 305px;
+      width: 221px;
       margin-right: 0;
     }
   }
 }
 
 .form__option {
-  margin-bottom: 20px;
+  margin-bottom: 25px;
 
   &:last-child {
     margin-bottom: 0;
@@ -299,7 +481,13 @@
   width: 100%;
   height: 150px;
   border: 1px solid @grey-border-input;
-  padding: 13px 12px 0 15px;
+  padding: 8px 12px 0 15px;
+
+  @media (min-width: @tablet-width) {
+    .heading(20px; 30px);
+    padding: 10px 12px 0 17px;
+    height: 174px;
+  }
 }
 
 .form__footer {
@@ -311,32 +499,38 @@
     display: flex;
     justify-content: space-between;
     align-items: flex-start;
-    width: 523px;
+    padding-right: 174px;
+    margin: 0;
   }
 
   @media (min-width: @desktop-width) {
-    width: 829px;
+    padding-right: 500px;
   }
 }
 
 .form__button {
   .button;
   border: none;
-  margin-bottom: 20px;
+  margin-bottom: 18px;
 
   @media (min-width: @tablet-width) {
     width: 282px;
     font-size: 20px;
-    padding: 13px;
+    padding: 16px;
   }
 
   @media (min-width: @desktop-width) {
     width: 568px;
+    margin-bottom: 0;
   }
 }
 
 .form__note {
   @media (min-width: @tablet-width) {
-    padding-top: 13px;
+    padding-top: 10px;
+  }
+
+  @media (min-width: @desktop-width) {
+    padding-top: 16px;
   }
 }
