--- a/source/less/blocks/general/page-header.less
+++ b/source/less/blocks/general/page-header.less
@@ -3,6 +3,7 @@
   flex-direction: column;
   flex-wrap: wrap;
   justify-content: flex-start;
+  margin: 0 auto;
   border-bottom: 1px solid @grey-border-input;
 
   @media (min-width: @tablet-width) {
