--- a/source/less/blocks/catalog/products.less
+++ b/source/less/blocks/catalog/products.less
@@ -15,7 +15,7 @@
   @media (min-width: @desktop-width) {
     grid-template-columns: auto auto auto auto;
     grid-template-rows: auto auto;
-    margin-bottom: 75px;
+    margin-bottom: 76px;
   }
 }
 
@@ -42,7 +42,7 @@
 }
 
 .products__item {
-  margin: 0 auto;
+  width: 100%;
   border-top: 1px solid @grey-border;
 
   @media (min-width: @tablet-width) {
@@ -62,7 +62,7 @@
   }
 
   @media (min-width: @desktop-width) {
-    margin: 0 80px 142px 0;
+    margin: 0 80px 144px 0;
     width: 245px;
     padding: 0 30 0 35px;
 
@@ -112,7 +112,7 @@
 
   @media (min-width: @desktop-width) {
     width: 172px;
-    margin-bottom: 35px;
+    margin-bottom: 33px;
   }
 }
 
