--- a/source/less/blocks/form/form.less
+++ b/source/less/blocks/form/form.less
@@ -1,45 +1,27 @@
 .form {
-  padding-bottom: 31px;
+  padding-bottom: 32px;
 
   @media (min-width: @tablet-width) {
-    padding-bottom: 55px;
+    padding-bottom: 57px;
   }
 
   @media (min-width: @desktop-width) {
-    padding-bottom: 85px;
+    padding-bottom: 82px;
   }
 }
 
 .form__container {
   .wrapper;
   width: 100%;
+  padding-left: 18px;
 
   @media (min-width: @tablet-width) {
+    padding-right: 67px;
     padding-left: 70px;
-    padding-right: 66px;
   }
 
   @media (min-width: @desktop-width) {
     padding: 0 110px;
-
-    &--contacts {
-      display: flex;
-      flex-wrap: wrap;
-      justify-content: space-between;
-      align-items: center;
-      margin-bottom: 67px;
-    }
-
-    &--info,
-    &--goal {
-      width: 568px;
-      padding: 0;
-    }
-
-    &--contacts .form__point {
-      margin-bottom: 0;
-      width: 568px;
-    }
   }
 }
 
@@ -50,7 +32,7 @@
     flex-wrap: wrap;
     justify-content: space-between;
     align-items: flex-start;
-    margin-bottom: 18px;
+    margin-bottom: 50px;
   }
 }
 
@@ -58,11 +40,25 @@
   .heading(16px; 18px);
   .uppercase-text(@special-dark-grey);
   border: none;
-  margin: 0;
   padding: 0;
+  margin-bottom: 12px;
 
   &--info {
-    padding-bottom: 7px;
+    & label {
+      margin-top: 7px;
+    }
+
+    & .form__label {
+      margin-top: 14px;
+    }
+
+    & .form__point {
+      margin: 0 0 12px;
+    }
+
+    & .form__field {
+      margin-left: 16px;
+    }
   }
 
   &--program {
@@ -72,15 +68,35 @@
   }
 
   &--contacts {
-    margin-bottom: 7px;
+    margin-bottom: 10px;
+
+    & .form__title {
+      margin-bottom: 35px;
+    }
+
+    & label {
+      margin-top: 5px;
+    }
+
+    & .form__point {
+      margin: 0 0 13px;
+    }
   }
 
   &--comment {
     margin-bottom: 21px;
+
+    & .form__title {
+      margin-bottom: 38px;
+    }
   }
 
   &--add {
-    margin-bottom: 40px;
+    margin-bottom: 41px;
+
+    & .form__title {
+      margin-bottom: 40px;
+    }
   }
 
   @media (min-width: @tablet-width) {
@@ -88,7 +104,20 @@
     color: @special-dark-grey;
 
     &--info {
-      padding-bottom: 50px;
+      margin-bottom: 51px;
+
+      & label {
+        margin-top: 10px;
+      }
+
+      & .form__point {
+        margin: 0 0 20px;
+      }
+
+      & .form__field {
+        margin-left: 19px;
+        padding-left: 16px;
+      }
     }
 
     &--program {
@@ -98,124 +127,110 @@
 
     &--contacts {
       margin-bottom: 45px;
-    }
 
-    &--comment {
-      margin-bottom: 65px;
-    }
+      & .form__title {
+        margin-bottom: 75px;
+      }
 
-    &--add {
-      margin-bottom: 10px;
-    }
-  }
+      & label {
+        margin-top: 10px;
+      }
 
-  @media (min-width: @desktop-width) {
-    &--program {
-      margin-bottom: 0;
-    }
+      & .form__point {
+        margin: 0 0 20px;
+      }
 
-    &--contacts {
-      margin-bottom: 0;
-    }
+      & .form__field {
+        &--mail {
+          margin-left: 18px;
+        }
 
-    &--comment {
-      margin-bottom: 67px;
-    }
-  }
-}
-
-.form__title {
-  .wrapper;
-  padding-right: 0;
-  padding-left: 18px;
-  margin: 0;
-  margin-bottom: 35px;
-  position: relative;
-  display: flex;
-  align-items: center;
-
-  &::after {
-    content: "";
-    flex-grow: 1;
-    flex-shrink: 0;
-    height: 2px;
-    margin-top: 15px;
-    margin-left: 22px;
-    background-color: @green;
-  }
-
-  &--contacts {
-    margin-bottom: 27px;
-
-    &::after {
-      margin-top: -20px;
-    }
-  }
-
-  &--comment {
-    margin-bottom: 38px;
-
-    &::after {
-      margin-top: 7px;
-    }
-  }
-
-  &--add {
-    margin-bottom: 40px;
-
-    &::after {
-      margin-top: 5px;
-    }
-  }
-
-  @media (min-width: @tablet-width) {
-    padding: 0;
-
-    &::before {
-      content: "";
-      flex-grow: 1;
-      flex-shrink: 0;
-      height: 2px;
-      margin-top: 10px;
-      margin-right: 22px;
-      background-color: @green;
-    }
-
-    &::after {
-      flex-grow: 10;
-      margin-top: 10px;
-    }
-
-    &--contacts br {
-      display: none;
-    }
-
-    &--contacts {
-      margin-bottom: 70px;
-
-      &::after {
-        margin-top: 13px;
-        flex-grow: 4;
+        &--tel {
+          margin-left: 15px;
+        }
       }
     }
 
     &--comment {
-      margin-bottom: 74px;
+      margin-bottom: 65px;
+
+      & .form__title {
+        margin-bottom: 75px;
+      }
+
+      & .form__legend {
+        &::after {
+          flex-grow: 17;
+        }
+      }
     }
 
     &--add {
-      margin-bottom: 70px;
+      margin-bottom: 10px;
+
+      & .form__title {
+        margin-bottom: 69px;
+      }
+
+      & .form__legend {
+        &::after {
+          flex-grow: 15;
+        }
+      }
     }
   }
 
   @media (min-width: @desktop-width) {
-    &::after {
-      flex-grow: 13;
+    &--info {
+      margin-bottom: 0;
+
+      & .form__container {
+        width: 568px;
+        padding: 0;
+      }
+    }
+
+    &--program {
+      margin-bottom: 0;
+
+      & .form__container {
+        width: 568px;
+        padding: 0;
+      }
     }
 
     &--contacts {
-      &::after {
-        flex-grow: 9;
+      margin-bottom: 0;
+
+      & .form__legend {
+        &::after {
+          flex-grow: 11;
+        }
+      }
+
+      & .form__container {
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: space-between;
+        align-items: center;
+        margin-bottom: 67px;
+      }
+
+      & .form__point {
+        margin-bottom: 0;
+        width: 568px;
+      }
+    }
+
+    &--comment {
+      margin-bottom: 70px;
+    }
+
+    &--add {
+      margin-bottom: 17px;
+
+      & .form__title {
+        margin-bottom: 67px;
       }
     }
   }
@@ -223,10 +238,53 @@
 
 .form__legend {
   .heading(24px; 26px);
+  .wrapper;
+  padding-left: 18px;
+  width: 100%;
+  padding-right: 0;
+  margin-bottom: 28px;
+  position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
   text-transform: none;
+
+  &::after {
+    content: "";
+    flex-grow: 10;
+    flex-shrink: 0;
+    height: 2px;
+    margin-left: 22px;
+    margin-top: 2px;
+    background-color: @green;
+  }
 
   @media (min-width: @tablet-width) {
     .heading(36px; 36px);
+    padding-left: 0;
+    padding-right: 0;
+    width: 100%;
+
+    &::before {
+      content: "";
+      width: 30px;
+      height: 2px;
+      margin-top: 10px;
+      margin-right: 40px;
+      background-color: @green;
+    }
+
+    &::after {
+      margin-top: 10px;
+      margin-left: 40px;
+      flex-grow: 5;
+    }
+  }
+
+  @media (min-width: @desktop-width) {
+    &::before {
+      width: 70px;
+    }
   }
 }
 
@@ -234,31 +292,7 @@
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
-  align-items: center;
-  margin-top: 10px;
-  margin-bottom: 15px;
-
-  &--contacts {
-    margin-bottom: 8px;
-  }
-
-  @media (min-width: @tablet-width) {
-    margin-bottom: 21px;
-
-    &--contacts {
-      margin-bottom: 15px;
-    }
-  }
-
-  @media (min-width: @desktop-width) {
-    &:first-child {
-      margin-top: 0;
-    }
-
-    &:last-child {
-      margin: 0;
-    }
-  }
+  align-items: flex-start;
 }
 
 .form__field {
@@ -267,20 +301,12 @@
   border: 1px solid @grey-border-input;
   padding: 13px 16px 13px 14px;
   flex: 1;
-  margin-left: 14px;
-
-  &--mail {
-    margin-top: 7px;
-  }
-
-  &--tel {
-    margin-top: 5px;
-  }
+  margin-left: 11px;
 
   @media (min-width: @tablet-width) {
     .heading(20px; 30px);
     color: @special-dark-grey;
-    padding: 10px 16px;
+    padding: 10px 20px;
   }
 }
 
@@ -291,7 +317,7 @@
 
   &--goal {
     color: @special-dark-text;
-    padding: 28px 0 24px;
+    padding: 27px 0 24px;
   }
 
   &--extra {
@@ -305,40 +331,42 @@
   @media (min-width: @tablet-width) {
     &--goal {
       border: 1px solid @grey-border-input;
-      padding: 35px 0;
-      padding-left: 28px;
-    }
+      padding: 36px 0;
+      padding-left: 27px;
 
-    &--goal .form__option {
-      margin-bottom: 35px;
+      & .form__option {
+        margin-bottom: 35px;
+      }
     }
 
     &--extra {
       display: flex;
       flex-wrap: wrap;
-    }
 
-    &--extra .form__option {
-      width: 282px;
-      margin-right: 60px;
-      margin-bottom: 54px;
+      & .form__option {
+        width: 282px;
+        margin-right: 60px;
+        margin-bottom: 54px;
 
-      &:nth-child(2n) {
-        margin-right: 0;
+        &:nth-child(2n) {
+          margin-right: 0;
+        }
       }
     }
   }
 
   @media (min-width: @desktop-width) {
     &--extra {
-      justify-content: space-between;
-      width: 1196px;
-      margin-bottom: 5px;
-    }
+      padding-right: 24px;
 
-    &--extra .form__option {
-      width: 221px;
-      margin-right: 0;
+      & .form__option {
+        width: 221px;
+        margin-right: 104px;
+
+        &:nth-child(2) {
+          margin-right: 104px;
+        }
+      }
     }
   }
 }
@@ -354,10 +382,6 @@
     display: flex;
     flex-wrap: wrap;
     align-items: center;
-  }
-
-  @media (min-width: @tablet-width) {
-    margin-bottom: 45px;
   }
 }
 
@@ -400,7 +424,7 @@
 
   @media (min-width: @tablet-width) {
     & + label {
-      padding-left: 60px;
+      padding-left: 59px;
 
       &::before {
         width: 40px;
@@ -481,7 +505,7 @@
   width: 100%;
   height: 150px;
   border: 1px solid @grey-border-input;
-  padding: 8px 12px 0 15px;
+  padding: 8px 12px 0 13px;
 
   @media (min-width: @tablet-width) {
     .heading(20px; 30px);
@@ -500,18 +524,20 @@
     justify-content: space-between;
     align-items: flex-start;
     padding-right: 174px;
-    margin: 0;
+    margin: 0 auto;
+    padding-left: 0;
   }
 
   @media (min-width: @desktop-width) {
-    padding-right: 500px;
+    padding-left: 110px;
+    padding-right: 476px;
   }
 }
 
 .form__button {
   .button;
   border: none;
-  margin-bottom: 18px;
+  margin: 0 auto 16px;
 
   @media (min-width: @tablet-width) {
     width: 282px;
@@ -521,7 +547,7 @@
 
   @media (min-width: @desktop-width) {
     width: 568px;
-    margin-bottom: 0;
+    margin: 0;
   }
 }
 
@@ -531,6 +557,6 @@
   }
 
   @media (min-width: @desktop-width) {
-    padding-top: 16px;
+    padding-top: 13px;
   }
 }
