--- a/source/less/blocks/general/address.less
+++ b/source/less/blocks/general/address.less
@@ -3,13 +3,6 @@
     background-color: @basic-grey;
   }
 
-  @media (min-width: @tablet-width) {
-    &--grey-bg .address__wrapper {
-      padding-top: 53px;
-      padding-bottom: 51px;
-    }
-  }
-
   @media (min-width: @desktop-width) {
     position: relative;
   }
@@ -23,17 +16,17 @@
   padding: 10px 19px;
 
   &--grey-bg {
-    padding-top: 25px;
-    padding-bottom: 0;
-  }
-
-  &--form {
-    padding-top: 18px;
-    padding-bottom: 7px;
+    padding-top: 10px;
+    padding-bottom: 15px;
   }
 
   @media (min-width: @tablet-width) {
-    padding: 50px 70px 43px;
+    padding: 45px 70px 43px;
+
+    &--form {
+      padding-top: 51px;
+      padding-bottom: 56px;
+    }
   }
 
   @media (min-width: @desktop-width) {
@@ -45,6 +38,10 @@
     opacity: 1;
     background-color: @basic-white;
     justify-content: flex-start;
+
+    &--grey-bg {
+      padding: 50px 76px 51px;
+    }
   }
 }
 
