--- a/source/less/blocks/general/address.less
+++ b/source/less/blocks/general/address.less
@@ -23,7 +23,7 @@
   @media (min-width: @tablet-width) {
     padding: 45px 70px 43px;
 
-    &--form {
+    &--grey-bg {
       padding-top: 51px;
       padding-bottom: 56px;
     }
