--- a/source/less/blocks/catalog/products-big-list.less
+++ b/source/less/blocks/catalog/products-big-list.less
@@ -67,10 +67,7 @@
   }
 
   @media (min-width: @desktop-width) {
-    padding: 0;
-    padding-top: 60px;
-    padding-left: 10px;
-    padding-right: 10px;
+    padding: 60px 10px 0 10px;
 
     &::before,
     &::after {
