--- a/source/less/blocks/form/form.less
+++ b/source/less/blocks/form/form.less
@@ -12,7 +12,6 @@
 
 .form__container {
   .wrapper;
-  width: 100%;
   padding-left: 18px;
 
   @media (min-width: @tablet-width) {
@@ -157,12 +156,6 @@
       & .form__title {
         margin-bottom: 75px;
       }
-
-      & .form__legend {
-        &::after {
-          flex-grow: 17;
-        }
-      }
     }
 
     &--add {
@@ -170,12 +163,6 @@
 
       & .form__title {
         margin-bottom: 69px;
-      }
-
-      & .form__legend {
-        &::after {
-          flex-grow: 15;
-        }
       }
     }
   }
@@ -201,12 +188,6 @@
 
     &--contacts {
       margin-bottom: 0;
-
-      & .form__legend {
-        &::after {
-          flex-grow: 11;
-        }
-      }
 
       & .form__container {
         display: flex;
@@ -236,54 +217,45 @@
   }
 }
 
-.form__legend {
+.form__title {
   .heading(24px; 26px);
-  .wrapper;
-  padding-left: 18px;
-  width: 100%;
-  padding-right: 0;
-  margin-bottom: 28px;
   position: relative;
-  display: flex;
-  align-items: center;
-  justify-content: flex-start;
+  overflow: hidden;
   text-transform: none;
 
-  &::after {
-    content: "";
-    flex-grow: 10;
-    flex-shrink: 0;
-    height: 2px;
-    margin-left: 22px;
-    margin-top: 2px;
-    background-color: @green;
+  &::before {
+    .green-line;
+    left: 50%;
   }
 
   @media (min-width: @tablet-width) {
     .heading(36px; 36px);
-    padding-left: 0;
-    padding-right: 0;
-    width: 100%;
 
     &::before {
-      content: "";
-      width: 30px;
-      height: 2px;
-      margin-top: 10px;
-      margin-right: 40px;
-      background-color: @green;
+      left: 0;
+      top: 23px;
     }
+  }
+}
 
-    &::after {
-      margin-top: 10px;
-      margin-left: 40px;
-      flex-grow: 5;
+.form__legend {
+  .wrapper;
+  padding-left: 19px;
+
+  & > span {
+    background-color: @basic-white;
+    padding-right: 15px;
+  }
+
+  @media (min-width: @tablet-width) {
+    & > span {
+      padding: 0 37px;
     }
   }
 
   @media (min-width: @desktop-width) {
-    &::before {
-      width: 70px;
+    & > span {
+      padding: 0 40px 0 0;
     }
   }
 }
@@ -317,7 +289,7 @@
 
   &--goal {
     color: @special-dark-text;
-    padding: 27px 0 24px;
+    padding: 27px 0 25px;
   }
 
   &--extra {
