--- a/source/less/blocks/form/form.less
+++ b/source/less/blocks/form/form.less
@@ -12,7 +12,6 @@
 
 .form__container {
   .wrapper;
-  padding-left: 18px;
 
   @media (min-width: @tablet-width) {
     padding-right: 67px;
@@ -31,7 +30,7 @@
     flex-wrap: wrap;
     justify-content: space-between;
     align-items: flex-start;
-    margin-bottom: 50px;
+    margin-bottom: 44px;
   }
 }
 
@@ -40,7 +39,7 @@
   .uppercase-text(@special-dark-grey);
   border: none;
   padding: 0;
-  margin-bottom: 12px;
+  margin: 0 0 10px 0;
 
   &--info {
     & label {
@@ -52,25 +51,34 @@
     }
 
     & .form__point {
-      margin: 0 0 12px;
+      margin: 0 0 13px;
     }
 
     & .form__field {
       margin-left: 16px;
+
+      &--weight {
+        margin-left: 18px;
+      }
     }
   }
 
   &--program {
     border-top: 1px solid @grey-border-input;
     border-bottom: 1px solid @grey-border-input;
-    margin-bottom: 26px;
+    margin-bottom: 24px;
   }
 
   &--contacts {
-    margin-bottom: 10px;
+    margin-bottom: 12px;
 
     & .form__title {
-      margin-bottom: 35px;
+      margin-bottom: 28px;
+
+      &::before {
+        top: 17px;
+        left: 68%;
+      }
     }
 
     & label {
@@ -78,7 +86,7 @@
     }
 
     & .form__point {
-      margin: 0 0 13px;
+      margin: 0 0 12px;
     }
   }
 
@@ -116,19 +124,28 @@
       & .form__field {
         margin-left: 19px;
         padding-left: 16px;
+
+        &--weight {
+          margin-left: 23px;
+        }
       }
     }
 
     &--program {
       border: none;
-      margin-bottom: 75px;
+      margin-bottom: 68px;
     }
 
     &--contacts {
-      margin-bottom: 45px;
+      margin-bottom: 39px;
 
       & .form__title {
-        margin-bottom: 75px;
+        margin-bottom: 70px;
+
+        &::before {
+          top: 29px;
+          left: 0;
+        }
       }
 
       & label {
@@ -141,7 +158,7 @@
 
       & .form__field {
         &--mail {
-          margin-left: 18px;
+          margin-left: 20px;
         }
 
         &--tel {
@@ -151,10 +168,10 @@
     }
 
     &--comment {
-      margin-bottom: 65px;
+      margin-bottom: 59px;
 
       & .form__title {
-        margin-bottom: 75px;
+        margin-bottom: 70px;
       }
     }
 
@@ -162,7 +179,7 @@
       margin-bottom: 10px;
 
       & .form__title {
-        margin-bottom: 69px;
+        margin-bottom: 62px;
       }
     }
   }
@@ -170,6 +187,14 @@
   @media (min-width: @desktop-width) {
     &--info {
       margin-bottom: 0;
+
+      & .form__label {
+        margin-top: 17px;
+      }
+
+      & label {
+        margin-top: 12px;
+      }
 
       & .form__container {
         width: 568px;
@@ -194,7 +219,7 @@
         flex-wrap: wrap;
         justify-content: space-between;
         align-items: center;
-        margin-bottom: 67px;
+        margin-bottom: 62px;
       }
 
       & .form__point {
@@ -204,14 +229,14 @@
     }
 
     &--comment {
-      margin-bottom: 70px;
+      margin-bottom: 60px;
     }
 
     &--add {
       margin-bottom: 17px;
 
       & .form__title {
-        margin-bottom: 67px;
+        margin-bottom: 63px;
       }
     }
   }
@@ -225,15 +250,18 @@
 
   &::before {
     .green-line;
-    left: 50%;
+  }
+
+  &--line {
+    line-height: 30px;
   }
 
   @media (min-width: @tablet-width) {
-    .heading(36px; 36px);
+    .heading(36px; 48px);
 
     &::before {
       left: 0;
-      top: 23px;
+      top: 28px;
     }
   }
 }
@@ -254,9 +282,7 @@
   }
 
   @media (min-width: @desktop-width) {
-    & > span {
-      padding: 0 40px 0 0;
-    }
+    padding: 0 70px;
   }
 }
 
@@ -279,6 +305,16 @@
     .heading(20px; 30px);
     color: @special-dark-grey;
     padding: 10px 20px;
+  }
+
+  @media (min-width: @tablet-width) {
+    &--age {
+      padding: 10px 23px;
+    }
+
+    &--tel {
+      padding: 10px 18px;
+    }
   }
 }
 
@@ -487,22 +523,22 @@
 }
 
 .form__footer {
+  .wrapper;
   text-align: center;
   line-height: 16px;
   color: @basic-black;
 
   @media (min-width: @tablet-width) {
     display: flex;
-    justify-content: space-between;
+    justify-content: flex-start;
     align-items: flex-start;
-    padding-right: 174px;
-    margin: 0 auto;
-    padding-left: 0;
+    padding-left: 70px;
   }
 
   @media (min-width: @desktop-width) {
     padding-left: 110px;
     padding-right: 476px;
+    justify-content: flex-start;
   }
 }
 
@@ -515,20 +551,22 @@
     width: 282px;
     font-size: 20px;
     padding: 16px;
+    margin: 0 63px 16px 0;
   }
 
   @media (min-width: @desktop-width) {
     width: 568px;
-    margin: 0;
+    margin: 0 81px 0 0;
   }
 }
 
 .form__note {
   @media (min-width: @tablet-width) {
-    padding-top: 10px;
+    padding-top: 12px;
   }
 
   @media (min-width: @desktop-width) {
     padding-top: 13px;
+    width: 180px;
   }
 }
