--- a/source/less/blocks/index/example-result.less
+++ b/source/less/blocks/index/example-result.less
@@ -5,6 +5,11 @@
 
   @media (min-width: @tablet-width) {
     align-items: flex-start;
+    margin-bottom: 206px;
+  }
+
+  @media (min-width: @desktop-width) {
+    margin-bottom: 0;
   }
 }
 
@@ -15,7 +20,7 @@
   align-items: center;
   width: 124px;
   margin-right: 31px;
-  margin-bottom: 20px;
+  margin-bottom: 25px;
 
   &:nth-child(2) {
     margin-right: 0;
