--- a/source/less/blocks/general/address.less
+++ b/source/less/blocks/general/address.less
@@ -13,7 +13,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 10px 19px;
+  padding: 10px 19px 9px;
 
   &--grey-bg {
     padding-top: 10px;
@@ -21,7 +21,7 @@
   }
 
   @media (min-width: @tablet-width) {
-    padding: 45px 70px 43px;
+    padding: 47px 70px 45px;
 
     &--grey-bg {
       padding-top: 51px;
@@ -32,9 +32,9 @@
   @media (min-width: @desktop-width) {
     width: 570px;
     position: absolute;
-    top: 95px;
+    top: 97px;
     left: 110px;
-    padding: 45px 76px 51px;
+    padding: 45px 76px 41px;
     opacity: 1;
     background-color: @basic-white;
     justify-content: flex-start;
@@ -94,16 +94,19 @@
 }
 
 .address__map {
-  @media (min-width: @mobile-width) {
-    background-color: @green;
+  height: 362px;
+
+  & .address__image {
+    width: 100%;
     height: 362px;
   }
 
   @media (min-width: @tablet-width) {
     height: 400px;
-  }
 
-  @media (min-width: @desktop-width) {
-    opacity: 0.3;
+    & .address__image {
+      width: 100%;
+      height: 400px;
+    }
   }
 }
