--- a/source/less/blocks/general/main-nav.less
+++ b/source/less/blocks/general/main-nav.less
@@ -79,7 +79,15 @@
   &--index {
     @media (min-width: @desktop-width) {
       background-color: @green;
-      padding-top: 40px;
+      height: 694px;
+      background-image: url("../img/index-background-desktop.jpg");
+      background-repeat: no-repeat;
+      background-position: 100% 50%;
+
+      @media (min-resolution: 2dppx) {
+        background-image: url("../img/index-background-desktop@2x.jpg");
+        background-size: 720px auto;
+      }
     }
   }
 }
@@ -91,7 +99,7 @@
   border: none;
   width: 24px;
   height: 20px;
-  top: -44px;
+  top: -43px;
   right: 20px;
   background-color: transparent;
   cursor: pointer;
