--- a/source/less/blocks/general/page-footer.less
+++ b/source/less/blocks/general/page-footer.less
@@ -10,7 +10,7 @@
   flex-wrap: wrap;
   justify-content: space-between;
   align-items: center;
-  padding-top: 24px;
+  padding-top: 38px;
 
   @media (min-width: @tablet-width) {
     flex-direction: row;
@@ -25,14 +25,17 @@
 }
 
 .page-footer__heading {
-  background-color: @special-grey;
+  display: block;
+  background-image: url("../img/footer-logo.svg");
+  background-repeat: no-repeat;
+  background-position: center;
   width: 128px;
   height: 24px;
   margin-bottom: 32px;
 
   @media (min-width: @tablet-width) {
     text-align: left;
-    margin: 0 20px 0 0;
+    margin: 0 5px 0 0;
   }
 }
 
@@ -41,7 +44,7 @@
   border-bottom: 1px solid @grey-line;
   width: 100%;
   padding: 20px 0 15px;
-  margin-bottom: 22px;
+  margin-bottom: 17px;
 
   @media (min-width: @tablet-width) {
     border: none;
