--- a/source/less/blocks/index/programs.less
+++ b/source/less/blocks/index/programs.less
@@ -1,4 +1,8 @@
 .programs {
+  @media (min-width: @tablet-width) {
+    margin-bottom: 45px;
+  }
+
   @media (min-width: @desktop-width) {
     margin-bottom: 42px;
   }
@@ -15,14 +19,15 @@
     font-size: 20px;
     width: 244px;
     padding: 18px 26px;
-    margin-left: 112px;
-    margin-bottom: 526px;
+    position: absolute;
+    top: 370px;
+    left: 119px;
   }
 
   @media (min-width: @desktop-width) {
-    margin-bottom: 273px;
-    margin-left: 190px;
     padding: 14px 26px 16px;
+    top: 458px;
+    left: 190px;
   }
 }
 
@@ -30,9 +35,14 @@
   .wrapper;
   list-style: none;
 
+  @media (min-width: @tablet-width) {
+    margin-top: 590px;
+  }
+
   @media (min-width: @desktop-width) {
     display: flex;
     flex-wrap: wrap;
+    margin-top: 82px;
   }
 }
 
@@ -52,13 +62,97 @@
   padding: 35px 0 20px 20px;
   margin-bottom: 20px;
 
+  &--slim {
+    & .programs__title {
+      &::before {
+        background-image: url("../img/cat-slim-mobile.svg");
+        top: -14px;
+      }
+    }
+  }
+
+  &--pro {
+    & .programs__title {
+      padding-left: 70px;
+
+      &::before {
+        background-image: url("../img/cat-pro-mobile.svg");
+        width: 67px;
+        height: 50px;
+        left: -7px;
+      }
+    }
+  }
+
   @media (min-width: @tablet-width) {
-    padding: 77px 279px 63px 52px;
+    padding: 78px 279px 63px 52px;
     margin-bottom: 30px;
+
+    &--slim {
+      & .programs__title {
+        &::before {
+          background-image: url("../img/cat-slim-tablet.svg");
+          top: 5px;
+        }
+      }
+
+      & .programs__description {
+        padding-right: 0;
+      }
+    }
+
+    &--pro {
+      & .programs__title {
+        padding-left: 0;
+        margin-bottom: 24px;
+
+        &::before {
+          background-image: url("../img/cat-pro-tablet.svg");
+          width: 268px;
+          height: 200px;
+          left: 360px;
+          top: 13px;
+        }
+      }
+    }
   }
 
   @media (min-width: @desktop-width) {
-    padding: 77px 51px 65px 52px;
+    padding: 77px 51px 67px 52px;
+
+    &--slim {
+      & .programs__title {
+        &::before {
+          background-image: url("../img/cat-slim-desktop.svg");
+          left: 0;
+          top: -35px;
+        }
+      }
+
+      & .programs__description {
+        padding-bottom: 0;
+      }
+    }
+
+    &--pro {
+      & .programs__title {
+        margin-bottom: 75px;
+        padding-left: 162px;
+
+        &::before {
+          background-image: url("../img/cat-pro-desktop.svg");
+          width: 134px;
+          height: 100px;
+          left: -20px;
+          top: -30px;
+        }
+      }
+
+      & .programs__description {
+        padding-right: 0;
+        padding-bottom: 0;
+      }
+    }
   }
 }
 
@@ -74,23 +168,21 @@
     position: absolute;
     content: "";
     width: 50px;
-    height: 50px;
+    height: 53px;
     left: 2px;
     top: -11px;
-    background-color: @green;
-    border-radius: 50%;
+    background-repeat: no-repeat;
   }
 
   @media (min-width: @tablet-width) {
     .heading(36px; 36px);
     padding-left: 0;
-    margin-bottom: 24px;
+    margin-bottom: 26px;
 
     &::before {
       width: 200px;
-      height: 200px;
-      left: 394px;
-      top: 13px;
+      height: 211px;
+      left: 392px;
     }
   }
 
@@ -100,36 +192,24 @@
 
     &::before {
       width: 100px;
-      height: 100px;
-      left: 0;
-      top: -30px;
+      height: 106px;
     }
   }
 }
 
 .programs__description {
   padding-right: 33px;
-  margin-bottom: 42px;
-
-  & br {
-    display: none;
-  }
+  margin-bottom: 20px;
+  padding-bottom: 21px;
+  border-bottom: 1px solid @grey-line;
 
   @media (min-width: @tablet-width) {
-    margin-bottom: 58px;
-    padding-right: 0;
-
-    & br {
-      display: block;
-    }
+    margin-bottom: 38px;
+    border: none;
   }
 
   @media (min-width: @desktop-width) {
-    margin-bottom: 33px;
-
-    & br {
-      display: none;
-    }
+    margin-bottom: 31px;
   }
 }
 
@@ -170,12 +250,12 @@
     font-size: 20px;
 
     &::before {
-      left: 133px;
+      left: 135px;
       top: 7px;
     }
 
     &::after {
-      left: 151px;
+      left: 149px;
       top: 3px;
     }
   }
