--- a/source/less/blocks/index/details.less
+++ b/source/less/blocks/index/details.less
@@ -13,7 +13,8 @@
 
 .details__heading {
   .heading(36px; 40px);
-  margin-bottom: 38px;
+  margin-bottom: 39px;
+  margin-top: 27px;
 
   @media (min-width: @tablet-width) {
     .heading(60px; 60px);
